--- a/programs/Candidate elimination algorithm.ipynb
+++ b/programs/Candidate elimination algorithm.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -47,30 +47,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "S0 : ['Sunny' 'Warm' 'High' 'Strong' 'Cool' 'Change']\n",
+      "S0 : ['sunny' 'warm' 'high' 'strong' '?' '?']\n",
       "G0 : [['?', '?', '?', '?', '?', '?'], ['?', '?', '?', '?', '?', '?'], ['?', '?', '?', '?', '?', '?'], ['?', '?', '?', '?', '?', '?'], ['?', '?', '?', '?', '?', '?'], ['?', '?', '?', '?', '?', '?']]\n",
-      "S1 : ['Sunny' 'Warm' 'High' 'Strong' 'Cool' 'Change']\n",
-      "G1 : [['?', '?', '?', '?', '?', '?'], ['?', '?', '?', '?', '?', '?'], ['?', '?', '?', '?', '?', '?'], ['?', '?', '?', '?', '?', '?'], ['?', '?', '?', '?', '?', '?'], ['?', '?', '?', '?', '?', '?']]\n",
-      "S2 : ['Sunny' 'Warm' 'High' 'Strong' 'Cool' 'Change']\n",
-      "G2 : [['?', '?', '?', '?', '?', '?'], ['?', '?', '?', '?', '?', '?'], ['?', '?', '?', '?', '?', '?'], ['?', '?', '?', '?', '?', '?'], ['?', '?', '?', '?', '?', '?'], ['?', '?', '?', '?', '?', '?']]\n",
+      "S1 : ['sunny' 'warm' 'high' 'strong' '?' '?']\n",
+      "G1 : [['sunny', '?', '?', '?', '?', '?'], ['?', 'warm', '?', '?', '?', '?'], ['?', '?', '?', '?', '?', '?'], ['?', '?', '?', '?', '?', '?'], ['?', '?', '?', '?', '?', '?'], ['?', '?', '?', '?', '?', '?']]\n",
+      "S2 : ['sunny' 'warm' 'high' 'strong' '?' '?']\n",
+      "G2 : [['sunny', '?', '?', '?', '?', '?'], ['?', 'warm', '?', '?', '?', '?'], ['?', '?', '?', '?', '?', '?'], ['?', '?', '?', '?', '?', '?'], ['?', '?', '?', '?', '?', '?'], ['?', '?', '?', '?', '?', '?']]\n",
       "final s:\n",
-      "['Sunny' 'Warm' 'High' 'Strong' 'Cool' 'Change']\n",
+      "['sunny' 'warm' 'high' 'strong' '?' '?']\n",
       "final g:\n",
-      "[]\n"
+      "[['sunny', '?', '?', '?', '?', '?'], ['?', 'warm', '?', '?', '?', '?']]\n"
      ]
     }
    ],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "data = pd.read_csv('1.csv')\n",
+    "data = pd.read_csv('data.csv')\n",
     "concepts = np.array(data.iloc[:,0:-1])\n",
     "target = np.array(data.iloc[:,-1])\n",
     "def learn(concepts,target):\n",
@@ -83,12 +83,12 @@
     "    specific_h = concepts[i].copy()\n",
     "    generic_h = [[\"?\" for i in range(len(specific_h))] for i in range (len(specific_h))]\n",
     "    for i,h in enumerate(concepts):\n",
-    "        if target[i] == \"Yes\":\n",
+    "        if target[i] == \"yes\":\n",
     "            for x in range(len(specific_h)):\n",
     "                if h[x] != specific_h[x]:\n",
     "                    specific_h[x] = \"?\"\n",
     "                    generic_h[x][x] = \"?\"    \n",
-    "        if target[i] == \"No\":\n",
+    "        if target[i] == \"no\":\n",
     "            for x in range(len(specific_h)):\n",
     "                if h[x] != specific_h[x]:\n",
     "                    generic_h[x][x] = specific_h[x]\n",
@@ -113,6 +113,28 @@
     "print(\"final s:\",s_final,sep=\"\\n\")\n",
     "print(\"final g:\",g_final,sep=\"\\n\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "S0 : ['sunny' 'warm' 'high' 'strong' 'warm' 'same']\n",
+      "G0 : [['?', '?', '?', '?', '?', '?'], ['?', '?', '?', '?', '?', '?'], ['?', '?', '?', '?', '?', '?'], ['?', '?', '?', '?', '?', '?'], ['?', '?', '?', '?', '?', '?'], ['?', '?', '?', '?', '?', '?']]\n",
+      "S1 : ['sunny' 'warm' 'high' 'strong' '?' '?']\n",
+      "G1 : [['sunny', '?', '?', '?', '?', '?'], ['?', 'warm', '?', '?', '?', '?'], ['?', '?', '?', '?', '?', '?'], ['?', '?', '?', '?', '?', '?'], ['?', '?', '?', '?', '?', '?'], ['?', '?', '?', '?', '?', '?']]\n",
+      "Final Specific_h: \n",
+      "['sunny' 'warm' 'high' 'strong' '?' '?']\n",
+      "Final General_h: \n",
+      "[['sunny', '?', '?', '?', '?', '?'], ['?', 'warm', '?', '?', '?', '?']]\n"
+     ]
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
